--- a/.github/workflows/TestEnv.yml
+++ b/.github/workflows/TestEnv.yml
@@ -1,17 +1,24 @@
 name: TestEnv
 
 on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
-  testenv:
+  test:
     strategy:
       matrix:
         os: [macos-12, ubuntu-20.04]
-    runs-on: ${{matrix.os}}
-    timeout-minutes: 2
+    runs-on: ${{ matrix.os }}
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Checkout
-      uses: actions/checkout@main
-    - name: "Swift Version"
-      run: swift --version
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
