--- a/.github/workflows/TestEnv.yml
+++ b/.github/workflows/TestEnv.yml
@@ -11,7 +11,7 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [macos-12, ubuntu-20.04]
+        os: [macos-latest, macos-12, ubuntu-20.04]
     runs-on: ${{ matrix.os }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -22,3 +22,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+        
+      - name: Swift Version
+        run: swift --version
